# kutschfahrt

./: .gitignore  Cargo.toml  README.md  app.py  test_kutschfahrt.py
.github/workflows/: rust.yml
client/: Cargo.toml  index.html
client/src/: i18n.rs  ingame.rs  main.rs  rules.rs
client/src/ingame/: actionlog.rs  attacking.rs  clairvoyant.rs  donation.rs  done_looking_btn.rs  itemlist.rs  mod.rs  myfaction.rs  myjob.rs  playerlist.rs  pregame.rs  select_items.rs  spectating.rs  trade_trigger.rs  trading.rs  turnstart.rs  utils.rs
client/src/ingame/trade_trigger/: coat.rs  mod.rs  sextant.rs
client/src/ingame/utils/: command_btn.rs  mod.rs  simple_dropdown.rs
client/src/locales/: de.ftl  en.ftl
client/style/: index.scss
kutschfahrt/: Cargo.toml
kutschfahrt/src/: lib.rs  main.rs  tests.rs
server/: Cargo.toml  sqlx-data.json
server/migrations/: 20210227234416_initial.sql
server/src/: error.rs  login.rs  main.rs
src/: main.rs
web_protocol/: Cargo.toml
web_protocol/src/: lib.rs
