[package]
name = "kutschfahrt-rs"
version = "0.1.0"
authors = ["main-- <main@ehvag.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
indexmap = { version = "1.6.1", features = ["serde-1"] }
rand = "0.8.3"
kutschfahrt = { path = "kutschfahrt" }

[workspace]
members = ["server"]
