[package]
name = "client"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17.4"
yewtil = "0.3.2"
yew-router = "0.14.0"
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
wee_alloc = "0.4.5"
ybc = "0.1.4"
web-sys = "0.3.55"
js-sys = "0.3.55"
web_protocol = { path = "../web_protocol" }
serde = "1.0.123"
serde_json = "1.0.73"
uuid = { version = "0.8.2", features = ["v4", "wasm-bindgen"] }


[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

