[package]
name = "client"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.55", features = ["Window", "Request", "RequestInit", "Response"] }
js-sys = "0.3.55"
web_protocol = { path = "../web_protocol" }
serde = "1.0.132"
serde_json = "1.0.73"
uuid = { version = "0.8.2", features = ["v4", "wasm-bindgen"] }
gloo-timers = "0.2.2"
gloo-utils = "0.1.1"
gloo-console = "0.2.1"


[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

