[package]
name = "client"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.55", features = ["Window", "Request", "RequestInit", "Response", "HtmlSelectElement", "EventSource", "MessageEvent"] }
js-sys = "0.3.55"
web_protocol = { path = "../web_protocol" }
serde = "1.0.132"
serde_json = "1.0.73"
uuid = { version = "0.8.2", features = ["v4", "wasm-bindgen"] }
gloo-timers = "0.3.0"
gloo-utils = "0.2.0"
gloo-console = "0.3"
gloo-dialogs = "0.2.0"
gloo-events = "0.2.0"

[features]


[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

