[package]
name = "server"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.123"
serde_derive = "1.0.123"
kutschfahrt = { path = "../kutschfahrt" }
anyhow = "1.0.38"
steam-auth = "1.0"
reqwest = "0.11.1"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
features = ["secrets"]

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json"]

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = ["runtime-tokio-native-tls", "macros", "postgres", "sqlite", "migrate", "offline"]

