[package]
name = "server"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.64"
kutschfahrt = { path = "../kutschfahrt" }
web_protocol = { path = "../web_protocol" }
anyhow = "1.0.38"
steam-auth = "1.0"
reqwest = "0.11.1"
rand = "0.8.3"
thiserror = "1.0.24"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["secrets", "json"]

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = ["runtime-tokio-native-tls", "macros", "postgres", "sqlite", "migrate", "offline"]

