[package]
name = "server"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.132"
serde_derive = "1.0.132"
serde_json = "1.0.73"
kutschfahrt = { path = "../kutschfahrt" }
web_protocol = { path = "../web_protocol" }
anyhow = "1.0.51"
steam-auth = "1.0.0"
reqwest = "0.11.7"
rand = "0.8.4"
thiserror = "1.0.30"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["secrets", "json"]

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = ["runtime-tokio-native-tls", "macros", "postgres", "sqlite", "migrate", "offline"]

